--- a/css/ica6-part3.css
+++ b/css/ica6-part3.css
@@ -10,3 +10,10 @@
 #tallScreen{
     background-color: lavender;
 }
+
+@mediaonly screen and (max-width: 600px) {
+    #narrowScreen{
+        background-color: purple;
+    }
+
+}
