--- a/css/ica6-part1.css
+++ b/css/ica6-part1.css
@@ -12,6 +12,12 @@ body{
     position:relative;
 }
 
+#text1 {
+    left: 150%;
+    top: 250px;
+    position: relative;
+}
+
 #box2{
     width: 73vw;
     height: 33vh;
@@ -22,12 +28,28 @@ body{
     position:relative;
     left: 40vw;
     background-color: mediumvioletred;
+    /* position: fixed;
+    bottom: 0;
+    left: 0; */
+}
+
+#text2 {
+    position: absolute;
+    top: 27vh;
 }
 
 #box3{
 position: sticky;
 width: 73vw;
-height: 175vh;
+height: 100px;
 border-radius: 10px;
 background-color: orangered;
+}
+
+#text3 {
+    position: relative;
+    top: 0;
+    font-size: 50px;
+    border: 5px solid green;
+
 }
