--- a/css/week7.css
+++ b/css/week7.css
@@ -22,17 +22,36 @@ nav a{
     color:#FF851B;
 }
 
+nav a:hover {
+    background-color: blue;
+  }
+
 img{
     width:30vw;
     height: 30vh;
 }
 
 #red-ball{
-    background-color: #85144b;
+    background-color: yellowgreen;
     width: 20px;
     height:20px;
     border-radius: 50%;
     position: absolute;
     left:5vw;
     top:0;
+}
+
+.floating { 
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin-left: 30px;
+    margin-top: 5px;
+}
+ 
+@keyframes floating {
+    0% { transform: translate(0,  0px); }
+    50%  { transform: translate(0, 15px); }
+    100%   { transform: translate(0, -0px); }   
 }
